--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: genbankr
-Version: 1.6.0
+Version: 1.6.1
 Title: Parsing GenBank files into semantically useful objects
 Description: Reads Genbank files.
 Authors@R: c(person("Gabriel", "Becker", role = c("aut", "cre"),
@@ -24,7 +24,7 @@ Imports:
     Biobase
 Suggests:
     RUnit,
-    rentrez,
+    rentrez (>= 1.2.1),
     knitr,
     rmarkdown,
     BiocStyle
