--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: genbankr
-Version: 1.29.0
+Version: 1.29.1
 Title: Parsing GenBank files into semantically useful objects
 Description: Reads Genbank files.
 Authors@R: c(person("Gabriel", "Becker", role = c("aut", "cre"),
@@ -32,3 +32,4 @@ VignetteBuilder: knitr
 RoxygenNote: 5.0.1.9000
 biocViews: Infrastructure, DataImport
 NeedsCompilation: no
+PackageStatus: Deprecated
